--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "author": "Diego",
     "license": "ISC",
     "dependencies": {
-        "ws": "^8.18.0",
+        "dotenv": "^16.4.5",
+        "net": "^1.0.2",
         "readline": "^1.3.0",
-        "net": "^1.0.0"
+        "readline-sync": "^1.4.10",
+        "ws": "^8.18.0"
     }
 }
